# pug-rs

./: Cargo.toml  README.md
assets/: foot.pug  head.pug  index.pug
src/: lib.rs  main.rs
