[package]
name = "pug"
version = "0.3.0"
authors = ["Vi+ <vitaliyy@gmail.com>", "Arvid E. Picciani <aep@exys.org>"]
edition = '2021'
license = "MIT"
description = "pug.js reimplemented in rust for speed"
repository = "https://github.com/vitali2y/pug-rs"
readme = "README.md"
keywords = ["pug", "jade", "template"]
categories = ["command-line-utilities", "parsing", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
